@@ -1,5 +1,8 @@
 2009-05-26  Zoltan Varga  <vargaz@gmail.com>
 
+	* CMakeLists.txt: implement arm fpu detection, add vfp detection as
+	well.
+	
 	* CMakeLists.txt: Add arm support.
 
 2009-05-24  Miguel de Icaza  <miguel@novell.com>
